# Evolution

./: .gitignore  LICENSE  Main.py  README.md  pyproject.toml  requirements.txt
core/: Controller.py  Entity.py  Input_handler.py  Interface.py  Map.py  Renderer.py  Save.py  Settings.py  World.py
installation/: install.ps1  install.sh
save/: save.save
